jerry-core/parser/js/new-parser/tests/js/strict-mode/function-inherits-strict.js.expected

--- Script parsing start ---

  Note: switch to strict mode

  [  1] CBC_PUSH_LITERAL idx:0->string(use strict)
  [  0] CBC_POP_BLOCK

--- Function parsing start ---


--- Script parsing end ---

Parse error 'With statement not allowed in strict mode.' at line: 6 col: 3
